src/css/menu.css
.menu-container {
  position: absolute;
  top: 0;
  right: 0;
}
.menu-popup {
  display: grid;
  justify-items: start;
}
.tippy-box {
  border-radius: 0 5px 5px 0; /* round top & bottom right corners */
  background-color: var(--light-2);
  color: var(--dark-0);
}

.project > .menu-container {
  .menu-btn {
    color: var(--light-3);
    font-size: 1.5rem;
    margin-top: 15px;
    margin-right: 5px;
  }
  .menu-popup {
    font-size: 0.8rem;
    padding: 5px;
    gap: 10px;
  }
}
.todo > .menu-container {
  .menu-btn {
    color: var(--light-2);
    font-size: 24px;
    margin-top: 10px;
    margin-right: 3px;
  }
  .menu-popup {
    font-size: 0.75rem;
    padding: 3px;
    gap: 5px;
  }
}

